ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src

EXTRA_DIST = \
doc/closure.org \
doc/ex_dynbind.c \
doc/llscheme.org \
doc/object.txt \
doc/scheme.g \
doc/scope.txt \
lib/generic.scm \
test/define.scm \
test/eager.scm \
test/fib.scm \
test/lexscope.scm \
test/list.scm \
test/math.scm \
test/numbers.scm \
test/sexp.scm
