ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src

EXTRA_DIST = \
doc/closure.org \
doc/ex_dynbind.c \
doc/llscheme.org \
doc/object.txt \
doc/scheme.g \
doc/scope.txt \
lib/generic.scm \
test/define.scm \
test/eager.scm \
test/fib.scm \
test/lexscope.scm \
test/list001.scm \
test/math001.scm \
test/number001.scm \
test/compare-with.sh \
test/run-with-gsi.scm \
test/run-with-guile.scm \
test/sexp.scm \
test/string001.scm \
test/string002.scm \
test/string003.scm \
test/string004.scm
